fix: tooltip arrow position/jquery show on every element (not only collapse)

--- a/alfa.host/area/app/views/client/alfa/src/main.css
+++ b/alfa.host/area/app/views/client/alfa/src/main.css
@@ -86,11 +86,11 @@
             @apply relative z-10;
 
             &::before {
-                @apply border-5 absolute top-0 left-1 -translate-y-2 border-transparent border-t-black/70 content-[''];
+                @apply border-5 absolute top-0 left-1/2 -translate-y-2 -translate-x-1.25 border-transparent border-t-black/70 content-[''];
             }
 
             &::after {
-                @apply absolute left-1/2 -translate-x-1/2 bottom-full -translate-y-2 rounded-sm bg-black/70 px-3 py-1.5 text-xs font-normal normal-case text-white content-[attr(data-title)];
+                @apply absolute left-1/2 -translate-x-1/2 bottom-full -translate-y-2 min-w-max max-w-16 whitespace-pre-wrap rounded-sm bg-black/70 px-3 py-1.5 text-xs font-normal normal-case text-white content-[attr(data-title)];
             }
         }
     }
@@ -584,8 +584,8 @@
 /* jQuery hacks */
 .collapse {
     @apply invisible hidden;
+}
 
-    &.show {
-        @apply visible block;
-    }
+.show {
+    @apply visible block;
 }
